--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>File Uploader</title>
-  <!-- <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
-  <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
-  <link rel="icon" type="image/png" href="images/egg.png" />
-  <link href="css/style.css" rel="stylesheet">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>File Uploader</title>
+    <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="images/egg.png" />
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
+
 <body>
-  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
-    <div class="col-md-6">
-      <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
-    </div>
-    <div  class="nav-links col-md-6">
-      <ul>
-        <li><h1><a href="get_eggs.html">Upload Eggs |</a></h1></li>
-        <li><h1><a id="signout-btn" href="get_eggs.html">Sign out |</a></h1></li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container upload-container">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <h2>File Uploader</h2>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar"></div>
-            </div>
-            <input id="upload-input" type="file" name="uploads[]" multiple="multiple">
-          </div>
+    <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
+        <div class="col-md-6">
+            <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
         </div>
-      </div>
+        <div class="nav-links col-md-6">
+            <ul>
+                <li>
+                    <h1><a href="get_eggs.html">Upload Eggs |</a></h1></li>
+                <li>
+                    <h1><a id="signout-btn" href="get_eggs.html">Sign out |</a></h1></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container upload-container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h2>File Uploader</h2>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar"></div>
+                        </div>
+                        <input id="upload-input" type="file" name="uploads[]" multiple="multiple">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 
-  <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
-  <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
-  <script src="js/upload.js"></script>
-  <script type="text/javascript" src="js/signout.js"></script>
+    <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
+    <script src="js/upload.js"></script>
+    <script type="text/javascript" src="js/signout.js"></script>
 
 </body>
+
 </html>
