--- a/public/signin.html
+++ b/public/signin.html
@@ -15,35 +15,34 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
-    <div class="col-md-6">
-      <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
-    </div>
-    <div  class="nav-links col-md-6">
-      <ul>
-        <li><h1><a href="get_eggs.html" id="signout-btn">Sign out |</a></h1></li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
+        <div class="col-md-6">
+            <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
+        </div>
+        <div class="nav-links col-md-6">
+            <ul>
+                <li>
+                    <h1><a href="get_eggs.html" id="signout-btn">Sign out |</a></h1></li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
-      <div id="welcome-modal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-          <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content" id="welcome-modal-background">
-                  <div class="modal-body">
-                      <div class="row">
-                          <div class="col-md-12">
-                              <img src="images/magic_word.gif" alt="you didn't say the magic word">
-                              <section id="demo_voices_player"></section>
-                          </div>
-                      </div>
-                      <br>
-                  </div>
-              </div>
-          </div>
-      </div>
-
+        <div id="welcome-modal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content" id="welcome-modal-background">
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <img src="images/magic_word.gif" alt="you didn't say the magic word">
+                                <section id="demo_voices_player"></section>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="signin-container">
-
             <form id="signin" class="form-signin">
                 <h2 class="form-signin-heading">Please sign in</h2>
                 <label for="inputEmail" class="sr-only">Email address</label>
@@ -55,29 +54,24 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
                 </div>
-                <button id = "signin-btn" class="btn btn-lg btn-primary btn-block" type="submit" name="action">
+                <button id="signin-btn" class="btn btn-lg btn-primary btn-block" type="submit" name="action">
                   Sign in
                 </button>
             </form>
-
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4"></div>
         <div class="col-xs-4 col-sm-4 col-md-4">
             <h6>New User? Click <a href="signup.html"><button type="button" name="login-btn">Sign Up</button></a></h6>
-
-
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4"></div>
-
     </div>
     <!-- /container -->
+
     <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/vendors/toastr.min.js"></script>
     <script src="js/signin.js"></script>
     <script type="text/javascript" src="js/signout.js"></script>
-
-
 </body>
 
 </html>
